# data-app

./: .eslintrc  .gitignore  Cargo.toml  Dockerfile  config.example.toml  docker-compose.yaml  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.cargo/: config.toml
crates/lib-core/: Cargo.toml
crates/lib-core/src/: common_schema.rs  error.rs  lib.rs
crates/lib-core/src/authentication/: error.rs  mod.rs  schema.rs  service.rs
crates/lib-core/src/finance/: mod.rs  schema.rs  service.rs
crates/lib-entity/: Cargo.toml
crates/lib-entity/src/: lib.rs
crates/lib-entity/src/address/: mod.rs  receipt_address.rs
crates/lib-entity/src/authentication/: permission.rs  role.rs  role_permission.rs  user.rs  user_role.rs
crates/lib-entity/src/common/: event_credential.rs  mod.rs
crates/lib-entity/src/finance/: bill.rs  bill_category.rs  mod.rs
crates/lib-utils/: Cargo.toml
crates/lib-utils/src/: lib.rs  math.rs  settings.rs
crates/migration/src/: m20220101_000001_create_table.rs
crates/web-api/: Cargo.toml
crates/web-api/src/: api_error.rs  lib.rs  main.rs  response.rs  route.rs
crates/web-api/src/board/: controller.rs
crates/web-api/src/finance/: controller.rs
crates/web-api/src/user/: controller.rs
prisma/: db.sqlite  schema.prisma
prisma/migrations/20240202021403_init_tables/: migration.sql
src/app/: layout.tsx  page.tsx
src/app/(manager)/manager/: layout.tsx  page.tsx
src/app/(manager)/manager/finance/budget/: page.tsx
src/app/(manager)/manager/finance/flow/: page.tsx
src/app/(manager)/manager/setting/: page.tsx
src/app/(manager)/manager/user/: page.tsx
src/app/(manager)/manager/user/[uid]/: page.tsx
src/app/api/finance/bill/add/: route.ts
src/app/api/finance/bill/delete/: route.ts
src/app/api/finance/bill/query/: route.ts
src/app/api/finance/bill/update/: route.ts
src/app/api/finance/category/add/: route.ts
src/app/api/finance/category/delete/: route.ts
src/app/api/finance/category/query/: route.ts
src/app/api/finance/category/update/: route.ts
src/app/api/health/: route.ts
src/app/api/user/add/: route.ts
src/app/api/user/delete/: route.ts
src/app/api/user/query/: route.ts
src/app/api/user/update/: route.ts
src/components/Form/: CreateOrEditBudgetForm.tsx  CreateOrEditFlowForm.tsx  CreateUserForm.tsx  ImportBudgetForm.tsx  ImportFlowForm.tsx
src/components/Landing/: LandingContainer.tsx
src/components/Navbar/: Navbar.tsx  NavbarLinksGroup.tsx
src/components/PageContainer/: PageContainer.tsx
src/components/Stat/: BoardStat.tsx
src/components/Table/: BudgetTable.tsx  FlowTable.tsx  UserTable.tsx
src/models/: db.ts  finance.ts  user.ts
src/server/: finance.tsx  user.ts
src/server/global/: api.ts
src/stores/: member.ts
src/types/:  nav-item.ts  finance.d.ts  index.ts  models.ts  user.d.ts
web-app/: package.json  pnpm-lock.yaml
web-app/src/app/: provider.tsx
web-app/src/app/(manager)/manager/: page.tsx
web-app/src/app/(manager)/manager/setting/: page.tsx
web-app/src/app/(manager)/manager/user/: page.tsx
web-app/src/app/api/backend/[...path]/: route.ts
web-app/src/components/Form/: CreateOrEditBudgetForm.tsx  CreateOrEditFlowForm.tsx  ImportBudgetForm.tsx  ImportFlowForm.tsx
web-app/src/components/Navbar/: NavbarLinksGroup.tsx
web-app/src/components/Table/: BudgetTable.tsx  FlowTable.tsx  UserTable.tsx
web-app/src/hooks/: use-custom-table.ts
web-app/src/service/: finance.tsx  user.ts
web-app/src/service/global/: api.ts
web-app/src/stores/: config.ts
web-app/src/types/: models.ts
(+2 files in other folders)
