[package]
name = "lib-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lib-entity = { path = "../lib-entity" }

thiserror = { workspace = true }

async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

sea-orm = { workspace = true, features = ["mock"] }

uuid = { workspace = true, features = ["v4"] }
