[package]
name = "lib-entity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { workspace = true, features = [
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-uuid",
] }


chrono = { workspace = true, features = ["serde"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["parking_lot"] }
tracing = { workspace = true }
config = { workspace = true }
